--- a/crates/extrinsics/Cargo.toml
+++ b/crates/extrinsics/Cargo.toml
@@ -38,3 +38,8 @@ subxt = "0.30.1"
 subxt-signer = { version = "0.30.1", features = ["subxt", "sr25519"] }
 hex = "0.4.3"
 jsonrpsee = { version = "0.19.0", features = ["ws-client"] }
+assert_cmd = "2.0.12"
+regex = "1.9.1"
+predicates = "3.0.3"
+tempfile = "3.7.1"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
